2004-05-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* subsim.cpp
	  - mission descriptions are displayed in the menu
	* widget
	  - new attribute for widget_text: "sunken"
	* submarine
	  - parse and use depths data: scope depth, snorkel depth, alarm depth

2004-05-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* replaced own text file parsing with xml code
	* now missions and descriptions are fully dynamic
	* look at the data files for examples
	* some features are not fully ported or tested yet (look for fixme's)
	* added --mission cmd line param to start missions directly

2004-05-03  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game, user_interface, sky, global_data
	  - got rid of get_day_time() code
	  - computation of sun/moon position now ok
	  - daylight/brightness depends on sun

2004-04-29  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* global_data.cpp font.cpp
	  - used GL_CLAMP_TO_EDGE instead of GL_CLAMP
	  - included OglExt where it is needed
	  - removed silly WIN32 #ifdef's
	  - replaced #include<SDL/SDL_x> by #include<SDL_x> everywhere

2004-04-29  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* improved sky and star display
	* re-released current version as win32 package (improved .exe, needs
	  less dll's)

2004-04-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* released current status as 0.0.17

2004-04-26  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* filehelper
	  - fixed critical bugs in Win32 implementation
	  - new unix "is_dir" code

2004-04-25  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* countless water experiments and tests, many files modified
	* water still has some "fixme"'s, but looks already very good
	* filehelper
	  - fixed bug that trashed results when using more than one open_dir/read_dir
	    at once (it did never happen in this project, though)
	
2004-02-22  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* all over the place
	  - introduced a sane command_* API
	  - mostly got rid of direct sea_object.do_something(data) calls,