@@ -9,18 +9,80 @@
 void date::copy ( const date& d )
 {
 	memcpy ( &date_values, &d.date_values, sizeof date_values );
+	linear_time = d.linear_time;
+}
+
+unsigned date::length_of_year(unsigned year) const
+{
+	if (year % 4 == 0) {
+		if (year % 100 == 0) {
+			if (year % 400 == 0) {
+				return 366;
+			} else {
+				return 365;
+			}
+		} else {
+			return 366;
+		}
+	}
+	return 365;
+}
+
+unsigned date::length_of_month(unsigned year, unsigned month) const
+{
+	if (month == January || month == March || month == May || month == July || month == August
+			|| month == October || month == December)
+		return 31;
+	if (month == February)
+		return (length_of_year(year) == 366) ? 29 : 28;
+	return 30;
 }
 
 date::date ( unsigned year_, unsigned month_, unsigned day_, unsigned hour_,
 	unsigned minute_, unsigned second_ )
 {
-	memset ( &date_values, 0, sizeof date_values );
 	date_values[year]   = year_;
 	date_values[month]  = month_;
 	date_values[day]    = day_;
 	date_values[hour]   = hour_;
 	date_values[minute] = minute_;
 	date_values[second] = second_;
+	
+	// compute linear time
+	// compute number of days from 1.1.1939 first
+	unsigned d = 0;
+	for (unsigned y = 1939; y < year_; ++y)
+		d += length_of_year(y);
+	for (unsigned m = January; m < month_; ++m)
+		d += length_of_month(year_, m);
+	d += day_ - 1;
+	linear_time = d * 86400 + hour_ * 3600 + minute_ * 60 + second_;
+}
+
+date::date (unsigned lt)
+{
+	linear_time = lt;
+	date_values[second] = lt % 60;
+	lt = lt / 60;
+	date_values[minute] = lt % 60;
+	lt = lt / 60;
+	date_values[hour] = lt % 24;
+	lt = lt / 24;
+	// now lt is the number of days since 1.1.1939
+	unsigned y = 1939;
+	while (lt >= length_of_year(y)) {
+		lt -= length_of_year(y);
+		++y;
+	}
+	date_values[year] = y;
+	// now lt is the number of days since begin of year
+	unsigned m = January;
+	while (lt >= length_of_month(y, m)) {
+		lt -= length_of_month(y, m);
+		++m;
+	}
+	date_values[month] = m;
+	date_values[day] = 1 + lt;
 }
 
 date::date ( const date& d )
@@ -38,35 +100,27 @@ date& date::operator= ( const date& d )
 
 bool date::operator< ( const date& d ) const
 {
-	int res = year - d.year;
-
-	if ( !res )
-		res = month - d.month;
-
-	if ( !res )
-		res = day - d.day;
-
-	return res < 0;
+	return unsigned(linear_time/86400) < unsigned(d.linear_time/86400);
 }
 
 bool date::operator<= ( const date& d ) const
 {
-	return !( d < *this );
+	return unsigned(linear_time/86400) <= unsigned(d.linear_time/86400);
 }
 
 bool date::operator== ( const date& d ) const
 {
-	return !( *this < d ) && !( d < *this );
+	return unsigned(linear_time/86400) == unsigned(d.linear_time/86400);
 }
 
 bool date::operator>= ( const date& d ) const
 {
-	return !( *this < d );
+	return unsigned(linear_time/86400) >= unsigned(d.linear_time/86400);
 }
 
 bool date::operator> ( const date& d ) const
 {
-	return ( d < *this );
+	return unsigned(linear_time/86400) > unsigned(d.linear_time/86400);
 }
 
 ostream& operator<< ( ostream& os, const date& d )
@@ -93,12 +147,16 @@ ostream& operator<< ( ostream& os, const date& d )
 
 void date::load(istream& in)
 {
-	for (unsigned i = 0; i < last_date_type; ++i)
+	date_values[0] = read_u16(in);
+	for (unsigned i = 1; i < last_date_type; ++i)
 		date_values[i] = read_u8(in);
+	linear_time = read_u32(in);
 }
 
 void date::save(ostream& out) const
 {
-	for (unsigned i = 0; i < last_date_type; ++i)
+	write_u16(out, date_values[0]);
+	for (unsigned i = 1; i < last_date_type; ++i)
 		write_u8(out, date_values[i]);
+	write_u32(out, linear_time);
 }
