@@ -206,63 +206,3 @@ void deinit_global_data(void)
 	delete hedgehogimg;
 	delete panelbackgroundimg;
 }
-
-// returns 1939-1945, 1-12, 1-31
-static unsigned month_lengths[7*12] = {
-		31,28,31,30,31,30,31,31,30,31,30,31,	// 1939
-	31,29,31,30,31,30,31,31,30,31,30,31,	// 1940
-	31,28,31,30,31,30,31,31,30,31,30,31,	// 1941
-	31,28,31,30,31,30,31,31,30,31,30,31,	// 1942
-	31,28,31,30,31,30,31,31,30,31,30,31,	// 1943
-	31,29,31,30,31,30,31,31,30,31,30,31,	// 1944
-	31,28,31,30,31,30,31,31,30,31,30,31 };	// 1945
-	
-void get_date(double t, unsigned& year, unsigned& month, unsigned& day)
-{
-	unsigned secs = unsigned(t);
-	unsigned days = secs/86400;
-	unsigned i, daysum;
-	for(i = 0, daysum = 0; i < 7*12; ++i) {
-		if(daysum + month_lengths[i] > days) break;
-		daysum += month_lengths[i];
-	}
-	day = days - daysum + 1;
-	unsigned j, monthsum;
-	for(j = 0, monthsum = 0; j < 7; ++j) {
-		if(monthsum + 12 > i) break;
-		monthsum += 12;
-	}
-	month = i - monthsum + 1;
-	year = 1939 + j;
-}
-
-double get_time(unsigned year, unsigned month, unsigned day)
-{
-	// unsigned y = year-1939; Unused variable
-	unsigned m =(year-1939)*12 + month-1;
-	unsigned d = 0;
-	for(unsigned i = 0; i < m; ++i) d += month_lengths[i];
-	d += day-1;
-	return d*86400.0;
-}
-
-void get_date( double t, unsigned& year, unsigned& month, unsigned& day,
-	unsigned& hour, unsigned& minute, unsigned& second )
-{
-	get_date( t, year, month, day );
-
-	double sd = fmod( t, 86400 );
-	hour   = unsigned( sd / 3600.0f );
-	sd -= hour * 3600.0f;
-	minute = unsigned( sd / 60.0f );
-	sd -= minute * 60.0f;
-	second = unsigned( sd );
-}
-
-void get_date( double t, date& d )
-{
-	unsigned year, month, day, hour, minute, second;
-	get_date( t, year, month, day, hour, minute, second );
-
-	d = date( year, month, day, hour, minute, second );
-}
