@@ -1,3 +1,12 @@
+2004-05-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* subsim, game
+	  - added choice for time period for custom missions
+	* date, global_data
+	  - removed extra date/time functions in global_data. Now everything
+	    that has to do with date/time is handled in class date. The
+	    class now holds also the linear time, which makes many thing
+	    easier. Also a bug in saving/loading dates was fixed.
+	
 2004-05-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* subsim.cpp
 	  - mission descriptions are displayed in the menu
